# ereader-easy-swedish-vertex

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  experiment1_pipeline.json  experiment1_pipeline.yaml  main.py  optimized_translator.json  pyproject.toml  translator_optimized.json  translator_raw.json
data/books/: book1.epub
dbt_project/models/: experiment_scores.sql
prompts/: v1.txt  v2_1.txt  v2_2.txt
src/: book.py  experiment.py  llm.py  llm_direct.py  log_to_bigquery.py  promt.py  run_experiment.py
src/dspy/: evaluator.py  metric.py  optimization_miprov2.py  translator.py
src/experiments/: experiment1.py  experiment1_job.py  experiment1_pipeline.py  experiment1_pipeline_compile.py
src/functions/trigger_experiment1_pipeline/: main.py
src/utils/: book.py  log_to_bigquery.py  remove_images.py  save_sa_key_as_adc_file.py  secret.py  storage.py  upgrade_best_prompt.py
terraform/: main.tf
text/: test.txt  train.txt  train_after.txt
