[project]
name = "ereader-easy-swedish-vertex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.1",
    "dspy>=2.6.18",
    "functions-framework>=3.8.3",
    "google-cloud-aiplatform>=1.87.0",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-pipeline-components>=2.20.0",
    "google-cloud-secret-manager>=2.23.3",
    "kfp>=2.13.0",
    "nltk>=3.9.1",
    "panflute>=2.3.1",
    "pypandoc-binary>=1.15",
    "textstat>=0.7.5",
]
